Frozen Arrays length assignment should throw in strict mode https://bugs.webkit.org/show_bug.cgi?id=199365

Reviewed by Yusuke Suzuki.

JSTests:

* stress/frozen-array-length-should-throw-strict.js: Added.
(test):

Source/JavaScriptCore:

* runtime/JSArray.cpp:
(JSC::JSArray::put):


Canonical link: https://commits.webkit.org/213340@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247065 268f45cc-cd09-0410-ab3c-d52691b4dbfc